_sass/modules/_slider.scss
.slider {
  color: $white;
  position: relative;
}

.slide {
  overflow: hidden;
  position: relative;

  @media screen and (max-width: $large-mobile-max) {
    padding-bottom: 0;
  }
}

.slide__photo {
  margin-left: -4vw;
  margin-top: 2.5rem;
  max-width: none;
  width: calc(100% + 8vw);

  @media screen and (min-width: $tablet-min) {
    left: 50%;
    margin-top: $u-space-small;
    min-height: 100%;
    min-width: 50%;
    margin: 0;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: auto;
  }
}

.slide__story {
  padding: $u-space-default 0 $u-space-tiny;

  @media screen and (min-width: $tablet-min) {
    padding: $u-space-default $u-space-default $u-space-default 0;
  }
}

// Slider controls

.tns-controls {
  position: absolute;
  color: transparent;
  top: 50%;
  right: 60px;
  z-index: 1;

  .slider--quote & {
    right: -60px;
  }
}

[data-controls="prev"] {
  display: none;
}

[data-controls="next"] {
  background: url("/assets/img/svg/Slider-Arrow.svg") center no-repeat;

  @media screen and (max-width: $large-mobile-max) {
    display: none;
  }
}

// Slider nav (dots)

.tns-nav {
  position: absolute;
  z-index: 1;
}

[data-nav] {
  border-radius: 50%;
  height: 8px;
  width: 8px;
  margin-right: 9px;

  &:not(.tns-nav-active) {
    background: $white;
  }
}

.tns-nav-active {
  background: transparent;
  border: 1px solid $white;
}

// User Stories Slider

.slider--user-stories {
  min-height: 32rem;

  .tns-nav {
    left: 4vw;
    top: 2rem;

    @media screen and (min-width: $tablet-min) {
      left: 10vw;
    }

    @media screen and (min-width: $desktop-min) {
      left: 15vw;
    }

    @media screen and (min-width: $large-desktop-min) {
      left: 21vw;
    }
  }
}

// Quote Slider

.slider--quote {
  max-width: 100%;
  margin-bottom: $u-space-big;

  @media screen and (min-width: $tablet-min) {
    margin-bottom: $u-space-default;
    max-width: 60%;
  }

  .tns-nav {
    left: 0;
    bottom: -3rem;
  }
}

